Setup context for total number of reviews and added this context to overview section. Also altered some styling to prevent line breaks on resizing window

--- a/client/src/style.sass
+++ b/client/src/style.sass
@@ -405,7 +405,7 @@ span.cardIcon
 
 #ratings-container
   margin-right: 50px
-  min-width: 250px
+  min-width: 275px
   width: 30%
 
 #ratings-breakdown
@@ -463,7 +463,7 @@ span.cardIcon
 .rating-bar
   display: grid
   grid-gap: 0.5rem
-  grid-template-columns: 2.25fr 6.75fr 1fr
+  grid-template-columns: 2fr 7fr 1fr
   margin-bottom: 1em
   padding: 0
   cursor: pointer
